--- a/praktikum 3 tailwind/index.html
+++ b/praktikum 3 tailwind/index.html
@@ -91,10 +91,20 @@
                     </div>
 
                     <div class="relative group aspect-square">
-                        <img src="assets/img/post4.jpg" class="w-full h-full object-cover" alt="Post 3">
+                        <img src="assets/img/post4.jpg" class="w-full h-full object-cover" alt="Post 4">
                         <div class="absolute inset-0 bg-black/50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
                             <p class="text-white flex items-center"><i class="ri-heart-fill mr-2"></i>1.2k</p>
                         </div>
+                    </div>
+
+                    <div class="aspect-square"><img src="assets/img/post5.jpg" class="w-full h-full object-cover" alt="Post 4"></div>
+                    <div class="aspect-square"><img src="assets/img/post6.jpg" class="w-full h-full object-cover" alt="Post 5"></div>
+                    <div class="aspect-square"><img src="assets/img/post7.jpg" class="w-full h-full object-cover" alt="Post 6"></div>
+                    <div class="aspect-square"><img src="assets/img/post8.jpg" class="w-full h-full object-cover" alt="Post 7"></div>
+                    <div class="aspect-square"><img src="assets/img/post9.jpg" class="w-full h-full object-cover" alt="Post 9"></div>
+                    <div class="aspect-square"><img src="assets/img/post10.jpg" class="w-full h-full object-cover" alt="Post 10"></div>
+                    <div class="aspect-square"><img src="assets/img/post11.jpg" class="w-full h-full object-cover" alt="Post 11"></div>
+                    <div class="aspect-square"><img src="assets/img/post12.jpg" class="w-full h-full object-cover" alt="Post 12"></div>
                 </div>
             </div>
         </main>
