--- a/praktikum 3 tailwind/index.html
+++ b/praktikum 3 tailwind/index.html
@@ -6,6 +6,7 @@
     <title>Profil Instagram - fawwzfadhillah</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body class="bg-gray-50 text-gray-800">
 
