--- a/praktikum 3 tailwind/index.html
+++ b/praktikum 3 tailwind/index.html
@@ -119,7 +119,7 @@
                 <li><a href="#" class="hover:underline">API</a></li>
                 <li><a href="#" class="hover:underline">Privacy</a></li>
             </ul>
-            <p>&copy; 2025 Instagram from Meta</p>
+            <p>&copy; 2025 Indogram from Meta</p>
         </footer>
     </div>
 </body>
